# Intruder

./: README.md  pyproject.toml  run.py
pyintruder/: __init__.py  __main__.py  constants.py
pyintruder/core/: __init__.py  attacks.py  engine.py  http_client.py  template.py
pyintruder/gui/: __init__.py  app.py  highlighting.py  request_panel.py  results_panel.py  sidebar.py
